fix width skills & animation on mobile

--- a/src/components/Skills/Skills.module.scss
+++ b/src/components/Skills/Skills.module.scss
@@ -38,6 +38,7 @@
       gap: 15px;
 
       @media screen and (max-width: 991px) {
+        width: 100%;
         grid-template-columns: repeat(3, 1fr);
       }
 
